--- a/inrobin/inrobinstyle.css
+++ b/inrobin/inrobinstyle.css
@@ -523,6 +523,15 @@ img.smicon {
     height:100%;
 }
 
+.femtePulp{
+    padding: 10%;
+    z-index: 5;
+    background-size:100%;
+    overflow: hidden;
+    height:100%;
+    background-color: rgb(0, 90, 90);
+}
+
 
 .sjette {
     padding: 10%;
