--- a/inrobin/inrobinstyle.css
+++ b/inrobin/inrobinstyle.css
@@ -85,10 +85,24 @@ img.logo {
 }
 
 img.smicon {
-    width: 50px;
+    width: 140px;
     margin: 0 5% 0 5%
 }
 
+@media screen and (max-width: 1000px) {
+  img.smicon {
+      width: 250px;
+      margin: 0 5% 0 5%
+  }
+}
+.dropbtn {
+    background-color: rgb(240, 75, 50);
+    color: white;
+    padding: 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
 
 .righter {text-align: right;margin-right: 1%;}
 
@@ -167,7 +181,7 @@ img.smicon {
     position: relative;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1000px) {
     .right {height:100px;}
     .righter{margin-right: 10%;}
     .dropdown:not(:first-child) {display: none;padding-top: 20px;}
@@ -190,7 +204,7 @@ img.smicon {
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1000px) {
     .right.responsive {position: absolute;height:100px;}
     .right.responsive .icon {
         color: rgb(83, 88, 95);
@@ -275,9 +289,18 @@ img.smicon {
     text-decoration: none;
     display: inline-block;
     color: rgb(255, 255, 255);
-    font-size: 120px;
+    font-size: 80px;
     font-family: roboto-thin;
-    width: 90%;
+    width: 40%;
+    margin: 0;
+}
+.titleFaqs {
+    text-decoration: none;
+    display: inline-block;
+    color: rgb(0, 90, 90);
+    font-size: 80px;
+    font-family: roboto-thin;
+    width: 30%;
     margin: 0;
 }
 .negtitle {
@@ -290,6 +313,7 @@ img.smicon {
     font-size: 120px;
     width: 90%;
 }
+
 
 .smalltitle {
     margin: 0;
@@ -324,6 +348,16 @@ img.smicon {
 .negsubtitle {
     margin: 0;
     padding: 5% 0 0 0;
+    text-decoration: none;
+    display: inline-block;
+    color: white;
+    font-size: 30px;
+    font-family: roboto-thin;
+
+}
+.negsubtitleFaqs {
+    margin: 0;
+    padding: 0% 0 0 0;
     text-decoration: none;
     display: inline-block;
     color: white;
@@ -421,6 +455,30 @@ img.smicon {
     float: left;
 }
 
+.threesfaqs {
+    width: 100%;
+    float: left;
+    top: -250px;
+}
+
+.threesfaqs:hover .hoverboxW{
+    color: rgb(240, 75, 50);
+    cursor: pointer;
+}
+.threesfaqs:hover .hoverboxfaqs{
+    color: rgb(240, 75, 50);
+    cursor: pointer;
+}
+
+.hoverboxfaqs {
+    text-decoration: none;
+    display: inline-block;
+    color: rgb(0, 90, 90);
+    font-size: 20px;
+    font-family: roboto-light;
+
+}
+
 .threeskey {
     text-align: center;
     width: 100%;
@@ -512,7 +570,6 @@ img.smicon {
     background-size: 100%;
     height:100%;
     overflow: hidden;
-
 }
 .fjerde2 {
     padding: 6%;
@@ -551,6 +608,10 @@ img.smicon {
     width: 100%;
 
 }
+
+
+
+
 .sjetteRelative {
     padding: 10%;
     background-color: white;
@@ -615,8 +676,8 @@ img.smicon {
     overflow: hidden;
 }
 #faq {
-    padding: 10%;
-    background: linear-gradient( rgba(0, 90, 90, 0.85), rgba(0, 90, 90, 0.85) ), url(images/paper.jpeg);
+    padding: 7% 10% 3% 10%;
+    background: url(images/paperb.jpeg);
     background-repeat:no-repeat;
     background-size: 100%;
     overflow: hidden;
@@ -839,6 +900,8 @@ p2 {
   }
 
 /*MENU*/
+
+
 * {
     margin: 0;
     padding: 0;
@@ -1058,4 +1121,24 @@ header {
         right: -50%;
         width: 196px;
     }
+}
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: rgb(240,75,50);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
